--- a/psk_fitness/psk_fitness/Components/Exercises/Pages/Exercises.razor
+++ b/psk_fitness/psk_fitness/Components/Exercises/Pages/Exercises.razor
@@ -1,11 +1,13 @@
 ﻿@page "/exercises"
+
 @using psk_fitness.Interfaces
 @inject IExerciseRepository ExerciseRepository
 
+@rendermode InteractiveServer
 
 <div class="d-flex align-items-center">
     <h3 class="me-3">Exercises:</h3> 
-    <CreateExercise /> 
+    <CreateExercise OnExerciseCreated="RefreshExercises" />
 </div>
 
 @if (exercises == null)
@@ -20,15 +22,22 @@ else
 {
     @foreach (var exercise in exercises)
     {
-        <li>@exercise.Title</li>
+        <li>@exercise.Title @exercise.Steps</li>
     }
 }
 
 @code {
-    List<ExerciseDisplayDTO>? exercises = null;
+    List<ExerciseDisplayDTO> exercises;
 
     protected override async Task OnInitializedAsync()
     {
+        Console.WriteLine("Hello from Blazor component!");
+        await RefreshExercises();
+    }
+
+    async Task RefreshExercises()
+    {
         exercises = await ExerciseRepository.GetAllExercisesAsync();
+        StateHasChanged(); // Ensure UI refresh
     }
 }
