added refetch on Topic create

--- a/psk_fitness/psk_fitness/Components/App.razor
+++ b/psk_fitness/psk_fitness/Components/App.razor
@@ -38,6 +38,11 @@
             var myModal = new bootstrap.Modal(document.getElementById(modalId));
             myModal.show();
         }
+        function hideModal(modalId) {
+            var myModal = new bootstrap.Modal(document.getElementById(modalId));
+            myModal.hide();
+        }
+
     </script>
 </body>
 
