--- a/psk_fitness/psk_fitness/Components/Pages/Home.razor
+++ b/psk_fitness/psk_fitness/Components/Pages/Home.razor
@@ -3,9 +3,11 @@
 @using System.Security.Claims
 @using psk_fitness.Data
 @using Microsoft.AspNetCore.Components.Authorization
+@using psk_fitness.ClientServices
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
+@inject TopicFriendService TopicFriendService
 
 
 <PageTitle>Home</PageTitle>
@@ -16,6 +18,23 @@
     <p>Height: @user.Height cm</p>
     <p>Weight: @user.Weight kg</p>
     <p>Age: @user.Age years</p>
+
+
+    <h3>Accessible Topics</h3>
+
+@if (topics == null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    <ul>
+        @foreach (var topic in topics)
+        {
+            <li>@topic.Title</li>
+        }
+    </ul>
+}
 }
 else
 {
@@ -24,6 +43,7 @@ else
 
 @code {
     private ApplicationUser? user;
+    private List<Topic>? topics;
 
     protected override async Task OnInitializedAsync()
     {
@@ -35,5 +55,7 @@ else
             var userId = userClaimsPrincipal.FindFirst(c => c.Type == ClaimTypes.NameIdentifier)?.Value;
             user = await UserManager.FindByIdAsync(userId);
         }
+
+        topics = await TopicFriendService.GetAllAccessibleTopicsAsync();
     }
 }
