--- a/psk_fitness/psk_fitness/Components/Topics/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/Topics.razor
@@ -29,12 +29,12 @@
 </div>
 
 @if (_topicsToDisplay != null) {
-<div class="container mt-4">
+<div class="container mt-4 mx-0">
     <div class="row">
         @foreach (TopicDisplayDTO topic in _topicsToDisplay)
         {
-            <div class="col-md-2">
-                <div class="card mb-3 text-center topic-card-size ratio ratio-1x1 max-card-width" style=@($"background-color: {topic.CssColor}")>
+            <div class="col-md-2 mx-3">
+                <div class="card mb-3 text-center ratio ratio-1x1 max-card-width min-card-width" style=@($"background-color: {topic.CssColor}")>
                     <div class="card-body d-flex justify-content-center align-items-center">
                         <h1 class="card-title text-wrap card-title-adj">@topic.Title</h1>
                     </div>
@@ -98,6 +98,9 @@ else
     }
     .max-card-width {
         max-width: 200px;
+    }
+    .min-card-width {
+        min-width: 100px !important;
     }
     .container {
         width: 80%;
