completed front-end integration for getAllAccessibleTopics

--- a/psk_fitness/psk_fitness/Components/Pages/Home.razor
+++ b/psk_fitness/psk_fitness/Components/Pages/Home.razor
@@ -54,8 +54,8 @@ else
         {
             var userId = userClaimsPrincipal.FindFirst(c => c.Type == ClaimTypes.NameIdentifier)?.Value;
             user = await UserManager.FindByIdAsync(userId);
-        }
+            topicIdsToDisplay = await TopicFriendService.GetAllAccessibleTopicsAsync(userId);
 
-        topicIdsToDisplay = await TopicFriendService.GetAllAccessibleTopicsAsync();
+        }
     }
 }
