--- a/psk_fitness/psk_fitness/Components/Topics/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/Topics.razor
@@ -34,7 +34,8 @@
         @foreach (TopicDisplayDTO topic in _topicsToDisplay)
         {
             <div class="col-md-2 mx-3">
-                <div class="card mb-3 text-center ratio ratio-1x1 max-card-width min-card-width" style=@($"background-color: {topic.CssColor}")>
+                <div @onclick=@(() => DeleteTopicAsync(topic.Id))
+                    class="card hovered mb-3 text-center ratio ratio-1x1 max-card-width min-card-width" style=@($"background-color: {topic.CssColor}")>
                     <div class="card-body d-flex justify-content-center align-items-center">
                         <h1 class="card-title text-wrap card-title-adj">@topic.Title</h1>
                     </div>
@@ -149,6 +150,9 @@ else
         background-color: #f8f8f8;
         border-bottom: 1px solid #e7e7e7;
     }
+    .hovered:hover {
+        cursor: pointer;
+    }
 </style>
 
 @code {
@@ -199,9 +203,13 @@ else
     }
 
     private async Task FetchUserTopicsAsync() {
-        @* TODO: refetch when modal is closed *@
         var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
         var userEmail = authState.User.Identity.Name;
         _topicsToDisplay = await TopicService.GetUserDisplayTopicsAsync(userEmail);
+    }
+
+    private async Task DeleteTopicAsync(int topicId) {
+        await TopicService.DeleteTopicAsync(topicId);
+        await FetchUserTopicsAsync();
     }
 }
