--- a/psk_fitness/psk_fitness/Components/_Imports.razor
+++ b/psk_fitness/psk_fitness/Components/_Imports.razor
@@ -10,8 +10,9 @@
 @using psk_fitness
 @using psk_fitness.Client
 @using psk_fitness.Components
+@using psk_fitness.Data
 @using psk_fitness.DTOs
-@using psk_fitness.Models
+@using psk_fitness.DTOs.WorkoutDTOs
 @using psk_fitness.Interfaces
 @using psk_fitness.Properties
 @using psk_fitness.Utilities
