--- a/psk_fitness/psk_fitness/Components/Calendar/Pages/Modal.razor
+++ b/psk_fitness/psk_fitness/Components/Calendar/Pages/Modal.razor
@@ -18,48 +18,17 @@
 
                     <div class="modal-body">
                         <form>
-
-                            <label for="workout-type-div" class="form-label">Workout type:</label>
-                            @if (_doNotShowInputBoxes)
-                            {
-                                <p>@_singleDayWorkout.WorkoutType</p>
-                            }
-                            else
-                            {
-                                <div class="d-flex align-items-center">
-                                    <div id="workout-type-div" class="dropdown me-1">
-                                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            @_singleDayWorkout.WorkoutType
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            @foreach (var workoutType in workoutTypes)
-                                            {
-                                                <li><button class="dropdown-item" type="button" @onclick="() => SelectWorkoutType(workoutType)">@workoutType</button></li>
-                                            }
-                                        </ul>
-                                    </div>
-                                    <button type="button" @onclick="() => OnViewWorkoutPage()" class="btn btn-primary">Edit</button>
-                                </div>
-                            }
+                       
 
                             <div class="time-picker">
-                                <label for="startingTimeHours" class="form-label">Starting time:</label>
+                                <label for="startingTimeHours" class="form-label">Workout starting hour:</label>
                                 <div class="d-flex align-items-center">
-                                    @if (_doNotShowInputBoxes)
+                                    @if (_doNotShowInputBoxes && selectedWorkout != null)
                                     {
-                                        <span>@_singleDayWorkout.WorkoutStartHour</span>
-                                        <span class="mx-2">:</span>
-                                        <span>@_singleDayWorkout.WorkoutStartMinute</span>
+                                        <span>@selectedWorkout.Duration.</span>
                                     }
                                     else{
-                                        <input type="number" id="startingTimeHours" class="form-control" 
-                                               style="width: auto;" placeholder="HH" min="0" max="23"
-                                               @bind="_singleDayWorkout.WorkoutStartHour" @bind:event="oninput">
-
-                                        <span class="mx-2">:</span>
-                                        <input type="number" id="startingTimeMinutes" class="form-control" 
-                                               style="width: auto;" placeholder="MM" min="0" max="59"
-                                               @bind="_singleDayWorkout.WorkoutStartMinute" @bind:event="oninput">
+                                        <input type="time" id="startHours" name="StartHours"  required />
                                      }
                                 </div>
                             </div>
@@ -67,34 +36,25 @@
                             <div class="time-picker">
                                 <label for="endTimeHours" class="form-label">Starting time:</label>
                                 <div class="d-flex align-items-center">
-                                    @if (_doNotShowInputBoxes)
+                                    @if (_doNotShowInputBoxes && selectedWorkout != null)
                                     {
-                                        <span>@_singleDayWorkout.WorkoutEndHour</span>
-                                        <span class="mx-2">:</span>
-                                        <span>@_singleDayWorkout.WorkoutEndMinute</span>
+
                                     }
                                     else{
-                                        <input type="number" id="endTimeHours" class="form-control" 
-                                               style="width: auto;" placeholder="HH" min="0" max="23"
-                                               @bind="_singleDayWorkout.WorkoutEndHour" @bind:event="oninput">
-                                    
-                                        <span class="mx-2">:</span>
-                                        <input type="number" id="endTimeMinutes" class="form-control"
-                                               style="width: auto;" placeholder="MM" min="0" max="59"
-                                               @bind="_singleDayWorkout.WorkoutEndMinute" @bind:event="oninput">
+                                        <input type="time" id="endHours" name="EndHours" required />
                                     }
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <label for="dayWorkoutNotes" class="form-label">Notes</label>
-                                @if(_doNotShowInputBoxes)
+                                @if(_doNotShowInputBoxes && selectedWorkout != null)
                                 {
-                                    <p>@_singleDayWorkout.WorkoutNotes</p>
+                                    <p>@selectedWorkout.Notes</p>
                                 }
                                 else
                                 {
-                                    <textarea class="form-control" id="dayWorkoutNotes" rows="3" placeholder="Enter notes" @bind="_singleDayWorkout.WorkoutNotes"></textarea>
+                                    <textarea class="form-control" id="dayWorkoutNotes" rows="3" placeholder="Enter notes" @bind="selectedWorkout.Notes"></textarea>
                                 }
                             </div>
                         </form>
@@ -119,21 +79,17 @@
 
 @code {
 
-    private Workout _singleDayWorkout = new Workout();
+    private WorkoutDisplayDTO selectedWorkout = new WorkoutDisplayDTO();
     private bool _doNotShowInputBoxes = true;
 
-    private void SelectWorkoutType(string workoutType)
-    {
-        _singleDayWorkout.WorkoutType = workoutType;
-    }
 
     @inject IJSRuntime JSRuntime;
 
-    public async Task OpenAsync(Workout singleDayWorkout)
+    public async Task OpenAsync(WorkoutDisplayDTO singleDayWorkout)
     {
-        _singleDayWorkout = singleDayWorkout;
+        selectedWorkout = singleDayWorkout;
         await JSRuntime.InvokeVoidAsync("openModal", "calendarModal");
-        if (_singleDayWorkout.WorkoutType == "Workout type")
+        if (selectedWorkout.Title == "No title")
         {
             _doNotShowInputBoxes = false;
         }
@@ -148,10 +104,6 @@
 
     public void OnSaveWorkout()
     {
-        Console.WriteLine(_singleDayWorkout.WorkoutType);
-        Console.WriteLine(_singleDayWorkout.WorkoutStartHour + ":" + _singleDayWorkout.WorkoutStartMinute);
-        Console.WriteLine(_singleDayWorkout.WorkoutEndHour + ":" + _singleDayWorkout.WorkoutEndMinute);
-        Console.WriteLine(_singleDayWorkout.WorkoutNotes);
         _doNotShowInputBoxes = true;
     }
 
