--- a/psk_fitness/psk_fitness/Components/Layout/NavMenu.razor
+++ b/psk_fitness/psk_fitness/Components/Layout/NavMenu.razor
@@ -52,6 +52,11 @@
 
             <Authorized>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="calendarTwo">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Calendar
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="calendar">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Calendar
                     </NavLink>
