--- a/psk_fitness/psk_fitness/Components/App.razor
+++ b/psk_fitness/psk_fitness/Components/App.razor
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="psk_fitness.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="app.css?version=0.1">
+    <link rel="stylesheet" type="text/css" href="psk_fitness.styles.css?version=0.1">
 
     <HeadOutlet />
 </head>
