--- a/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
+++ b/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
@@ -1,10 +1,14 @@
 ﻿@page "/calendarTwo"
 @using System.Globalization
-@rendermode InteractiveWebAssembly
+@using psk_fitness.Client.Interfaces
+@rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 @{
     CultureInfo culture = new CultureInfo("en-US"); //Default to en-US calendar
 }
+@inject IWorkoutService WorkoutService
+
 @inject IJSRuntime JSRuntime
+
 
 <h3>Calendar</h3>
 
