Removed a typo in program.cs

--- a/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
+++ b/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
@@ -1,4 +1,4 @@
-﻿@page "/calendarTwo"
+﻿@page "/calendar"
 @using System.Globalization
 @using psk_fitness.Client.Interfaces
 @rendermode @(new InteractiveAutoRenderMode(prerender: false))
