Added Repository, Controller, Service methods for getting workouts by month

--- a/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
+++ b/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
@@ -40,5 +40,12 @@
 @code {
     Modal Modal { get; set; }
 
+    List<WorkoutForCalendarDTO> Workouts { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        Workouts = await WorkoutService.GetByMonth(DateTime.Now.Year, DateTime.Now.Month);
+        Console.WriteLine(Workouts);
+    }
 
 }
