--- a/psk_fitness/psk_fitness.Client/_Imports.razor
+++ b/psk_fitness/psk_fitness.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using psk_fitness.Client
+@using psk_fitness.Client.DTOs.WorkoutDTOs
