Added and modified Service and  Controller methods to get Workouts by ID

--- a/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
+++ b/psk_fitness/psk_fitness.Client/Pages/Calendar.razor
@@ -37,7 +37,7 @@
             {
                 <div class="workout-box">
                     <span>@workout.Title</span>
-                    <button class="edit-button" @onclick="() => Modal.Open()">Create</button>
+                    <button class="edit-button" @onclick="() => Modal.Open(workout.Id)">Edit</button>
                 </div>
             }
 
